[package]
name = "mimalloc-rs"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "This crate adds if-else expression into your constant functions"
keywords = ["alloc","memory","mimalloc","global-allocator","globalalloc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/playXE/mimalloc-rs"
[dependencies]
libc = "0.2"